--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.11.0</version>
         <configuration>
-          <release>${maven.compiler.release}</release>
+             <mainClass>proyectocriptografia.consola.MainSimulador</mainClass>
+            <!--<release>${maven.compiler.release}</release> -->
         </configuration>
       </plugin>
 
